<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="device_info_default">Unknown</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer.</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Erase SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_charging_wireless">(wireless)</string>
    <string name="battery_info_status_discharging">Not charging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_wireless">wireless</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="battery_info_health_cold">Cold</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (%1$s)</string>
    <string name="bluetooth_is_discoverable_always">Visible to all nearby Bluetooth devices</string>
    <string name="bluetooth_not_visible_to_other_devices">Not visible to other Bluetooth devices</string>
    <string name="radio_controls_title">More…</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="location_settings_title">Location access</string>
    <string name="security_settings_title">Security</string>
    <string name="bluetooth_settings_title">Bluetooth</string>
    <string name="wifi_settings_title">WLAN</string>
    <string name="sound_settings">Sound</string>
    <string name="all_volume_title">Volumes</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="notification_sound_title">Default notification sound</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Touch sounds</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Vibrate on touch</string>
    <string name="account_settings">Accounts</string>
    <string name="display_settings">Display</string>
    <string name="system_update_settings_list_item_title">System updates</string>
    <string name="system_update_settings_list_item_summary" />
    <string name="firmware_version">Android version</string>
    <string name="model_number">Model number</string>
    <string name="fcc_equipment_id">Equipment ID</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="selinux_status">SELinux status</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Battery Status, battery level, etc.</string>
    <string name="storage_settings">Storage</string>
    <string name="about_settings">About phone</string>
    <string name="legal_information">Legal information</string>
    <string name="regulatory_information">Regulatory information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="settings_safetylegal_title">Safety information</string>
    <string name="applications_settings">Apps</string>
    <string name="language_settings">Language &amp; input</string>
    <string name="development_settings_title">Developer options</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="power_usage_summary_title">Battery</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="privacy_settings">Reset</string>
    <string name="sound_category_sound_title">General</string>
    <string name="sound_category_calls_title">Incoming calls</string>
    <string name="sound_category_notification_title">Notifications</string>
    <string name="add_account_label">Add account</string>
    <string name="data_usage_summary_title">Data usage</string>
    <string name="data_usage_enable_mobile">Mobile data</string>
    <string name="sel_sub_title">Configure Subscriptions</string>
    <string name="sel_sub_summary">Select the Subscription SUB1, SUB2, etc..</string>
    <string name="multi_sim_settings_title">Dual SIM settings</string>
    <string name="voice_title">Voice/USSD/MMI</string>
    <string name="data_title">Data Call</string>
    <string name="sms_title">Messaging</string>
    <string name="selinux_status_enforcing">Enforcing</string>
    <string name="user_settings_title">Users</string>
    <string name="mobile_network_setting">Mobile network settings</string>
    <string name="call_settings">Call settings</string>
    <string name="preferred_subs_settings_title">Preferred SIM settings</string>
    <string name="sim_naming_title">SIM Card Naming</string>
    <string name="summary_network_settings">Set options for mobile networks, APNs</string>
    <string name="summary_call_settings">Set voice mail, call options for dual SIMs</string>
    <string name="sim_enabler">SIM card</string>
    <string name="dual_sim_configure">Subscriptions Configuration</string>
    <string name="title_data_settings">Data Settings</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="cpu_type">CPU model</string>
    <string name="ring_summary">Ring</string>
    <string name="silent_summary">Silent only</string>
    <string name="meeting_summary">Vibrate only</string>
    <string name="outdoor_summary">Loudest ring and vibrate</string>
    <string name="general_settings_title">General</string>
    <string name="silent_settings_title">Silent</string>
    <string name="meeting_settings_title">Meeting</string>
    <string name="outdoor_settings_title">Outdoor</string>
    <string name="Phone_vibrate_summary">Vibrate devices for incoming calls</string>
    <string name="voice_call_title">Voice call ringtone</string>
    <string name="voice_call_summary">Set your default voice calls ringtone</string>
    <string name="voice_call_title_2">Sim 2 call ringtone</string>
    <string name="voice_call_summary_2">Set your default sim 2 calls rington</string>
    <string name="audio_profile_settings_title">Audio profiles</string>
    <string name="audio_profile_category_custom_title">User defined profiles</string>
    <string name="audio_profile_category_predefine_title">Predefined profiles</string>
    <string name="sound_category_feedback_title">System</string>
    <string name="screen_info">屏幕分辨率</string>
    <string name="camera_info">相机像素</string>
</resources>