<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:persistent="false" android:orderingFromXml="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/audio_profile_category_custom_title" android:key="custom" />
    <PreferenceCategory android:title="@string/audio_profile_category_predefine_title" android:key="predefine" />
    <com.yeptelecom.audioprofile.AudioProfilePreference android:title="@string/general_settings_title" android:key="yep_audioprofile_general" android:summary="@string/ring_summary" />
    <com.yeptelecom.audioprofile.AudioProfilePreference android:title="@string/silent_settings_title" android:key="yep_audioprofile_silent" android:summary="@string/silent_summary" />
    <com.yeptelecom.audioprofile.AudioProfilePreference android:title="@string/meeting_settings_title" android:key="yep_audioprofile_meeting" android:summary="@string/meeting_summary" />
    <com.yeptelecom.audioprofile.AudioProfilePreference android:title="@string/outdoor_settings_title" android:key="yep_audioprofile_outdoor" android:summary="@string/outdoor_summary" />
</PreferenceScreen>