<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/about_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:layout="@layout/device_logo" android:key="device_logo" />
    <PreferenceCategory>
        <Preference android:title="@string/model_number" android:key="device_model" android:summary="小辣椒3S联通版 LA3S-W" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/firmware_version" android:key="firmware_version" android:summary="小辣椒3S联通版 LA3S-W" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/build_number" android:key="build_number" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference android:title="@string/cpu_type" android:key="cpu_type" android:summary="高通骁龙8228 4核心 1.4GHZ " style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/screen_info" android:key="screen_info" android:summary="5.5英寸 1080x1920像素" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/camera_info" android:key="camera_info" android:summary="后：1300W 前:500W" style="?android:preferenceInformationStyle" />
    </PreferenceCategory>
    <PreferenceCategory>
        <PreferenceScreen android:title="@string/device_status" android:key="status_info" android:summary="@string/device_status_summary">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.deviceinfo.Status" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/legal_information" android:key="container">
            <PreferenceScreen android:title="@string/copyright_title" android:key="copyright">
                <intent android:action="android.settings.COPYRIGHT" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/license_title" android:key="license">
                <intent android:action="android.settings.LICENSE" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/terms_title" android:key="terms">
                <intent android:action="android.settings.TERMS" />
            </PreferenceScreen>
        </PreferenceScreen>
        <Preference android:title="@string/baseband_version" android:key="baseband_version" android:summary="小辣椒3S联通版 LA3S-W" style="?android:preferenceInformationStyle" />
    </PreferenceCategory>
    <PreferenceCategory>
        <PreferenceScreen android:title="其它" android:key="other">
            <PreferenceScreen android:title="@string/system_update_settings_list_item_title" android:key="system_update_settings" android:summary="@string/system_update_settings_list_item_summary">
                <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
            </PreferenceScreen>
            <Preference android:title="@string/selinux_status" android:key="selinux_status" android:summary="@string/selinux_status_enforcing" style="?android:preferenceInformationStyle" />
            <Preference android:title="@string/kernel_version" android:key="kernel_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
            <Preference android:title="@string/fcc_equipment_id" android:key="fcc_equipment_id" android:summary="红辣椒联通版 LA2-W" style="?android:preferenceInformationStyle" />
            <PreferenceScreen android:title="@string/settings_safetylegal_title" android:key="safetylegal">
                <intent android:action="android.settings.SAFETY" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/regulatory_information" android:key="regulatory_info">
                <intent android:action="android.settings.SHOW_REGULATORY_INFO" />
            </PreferenceScreen>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>