<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/header_category_wireless_networks">
        <PreferenceScreen android:icon="@drawable/ic_settings_wireless" android:title="@string/wifi_settings_title" android:key="wifi_settings">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.wifi.WifiSettings" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/stat_notify_mobile_data" android:id="@id/mobiledata_settings" android:title="@string/data_usage_enable_mobile">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MobileNetworkSettings" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_bluetooth2" android:id="@id/bluetooth_settings" android:title="@string/bluetooth_settings_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.bluetooth.BluetoothSettings" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_data_usage" android:id="@id/data_usage_settings" android:title="@string/data_usage_summary_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$DataUsageSummaryActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/empty_icon" android:id="@id/wireless_settings" android:title="@string/radio_controls_title" android:breadCrumbTitle="@string/wireless_networks_settings_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$WirelessSettingsActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/header_category_device">
        <PreferenceScreen android:icon="@drawable/ic_settings_sim_display" android:id="@id/multi_sim_settings" android:title="@string/multi_sim_settings_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.multisimsettings.MultiSimSettings" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_call_display" android:id="@id/call_display_settings" android:title="@string/call_settings">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CallFeaturesSetting" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_sound" android:id="@id/sound_settings" android:title="@string/sound_settings">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.SoundSettings" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_sound_effect" android:id="@id/audio_profile_settings" android:title="@string/audio_profile_settings_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$AudioProfileSettingsActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_system_yun" android:title="界面和功能" android:key="roundr">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.roundr.SettingsActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_display" android:id="@id/display_settings" android:title="@string/display_settings">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.DisplaySettings" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_storage" android:id="@id/storage_settings" android:title="@string/storage_settings">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$StorageSettingsActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_battery" android:id="@id/battery_settings" android:title="@string/power_usage_summary_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.fuelgauge.PowerUsageSummary" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_applications" android:id="@id/application_settings" android:title="@string/applications_settings">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$ManageApplicationsActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/header_category_personal">
        <PreferenceScreen android:icon="@drawable/ic_settings_multiuser" android:id="@id/user_settings" android:title="@string/user_settings_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$UserSettingsActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_location" android:id="@id/location_settings" android:title="@string/location_settings_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$LocationSettingsActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_security" android:id="@id/security_settings" android:title="@string/security_settings_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.SecuritySettings" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_language" android:id="@id/language_settings" android:title="@string/language_settings">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$InputMethodAndLanguageSettingsActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_backup" android:id="@id/privacy_settings" android:title="@string/privacy_settings">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$PrivacySettingsActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings">
        <PreferenceScreen android:icon="@drawable/ic_menu_add" android:id="@id/account_add" android:title="@string/add_account_label">
            <intent android:action="android.settings.ADD_ACCOUNT_SETTINGS" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/header_category_system">
        <PreferenceScreen android:icon="@drawable/ic_settings_date_time" android:id="@id/date_time_settings" android:title="@string/date_and_time_settings_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$DateTimeSettingsActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_accessibility" android:id="@id/accessibility_settings" android:title="@string/accessibility_settings">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$AccessibilitySettingsActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_development" android:id="@id/development_settings" android:title="@string/development_settings_title">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.DevelopmentSettings" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/ic_settings_about" android:id="@id/about_settings" android:title="@string/about_settings">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$DeviceInfoSettingsActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>