<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <EditTextPreference android:persistent="false" android:singleLine="true" android:maxLength="6" android:key="sim_name_key" android:dialogTitle="@string/sim_naming_title" android:inputType="textNoSuggestions" />
    <PreferenceScreen android:persistent="false" android:title="@string/mobile_network_setting" android:key="mobile_network_key" android:summary="@string/summary_network_settings">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.SelectSubscription" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/call_settings" android:key="call_setting_key" android:summary="@string/summary_call_settings">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.SelectSubscription" />
    </PreferenceScreen>
</PreferenceScreen>